feat(fronend): add pretty title to menu
